// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for ReviewGCOQueryLogs Ensure output payload is correct while creating GCO Logs monitoring source 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main contentContainer"
    >
      <div
        class="StyledProps--font StyledProps--main leftPanel"
      />
      <div
        class="StyledProps--font StyledProps--main content"
      >
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="StyledProps--font StyledProps--main emptyCardHeader header"
          >
            <div
              class="StyledProps--font StyledProps--main content"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main mainHeading"
                  level="2"
                >
                  cv.monitoringSources.totalMappedQueries
                </h2>
                <p
                  class="StyledProps--font StyledProps--main subHeading"
                >
                  cv.monitoringSources.reviewPageSubHeading
                </p>
              </div>
              <div
                class="StyledProps--font StyledProps--main main search"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <span
                      class="bp3-icon bp3-icon-search StyledProps--main"
                      icon="search"
                    >
                      <svg
                        data-icon="search"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          search
                        </desc>
                        <path
                          d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input"
                      placeholder="cv.monitoringSources.appD.searchPlaceholderApplications, environments, or services"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="headingDivider"
            />
          </div>
          <div
            class="table mappingTable"
          >
            <div
              class="header"
              role="row"
            >
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                CV.MONITORINGSOURCES.QUERYNAME
              </div>
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                cv.monitoringSources.appD.mappedToHarnessService
              </div>
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                cv.monitoringSources.appD.mappedToHarnessEnvironment
              </div>
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                cv.monitoringSources.gcoLogs.query
              </div>
            </div>
            <div
              class="body"
            >
              <div
                class="row card"
                role="row"
              >
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    GCO Logs Query
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    s2
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    e2
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    test
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main rightPanel"
      />
    </div>
    <div
      class="StyledProps--font StyledProps--main footerCta"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          previous
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ReviewGCOQueryLogs Ensure output payload is correct while editing GCO Logs monitoring source 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main contentContainer"
    >
      <div
        class="StyledProps--font StyledProps--main leftPanel"
      />
      <div
        class="StyledProps--font StyledProps--main content"
      >
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="StyledProps--font StyledProps--main emptyCardHeader header"
          >
            <div
              class="StyledProps--font StyledProps--main content"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main mainHeading"
                  level="2"
                >
                  cv.monitoringSources.totalMappedQueries
                </h2>
                <p
                  class="StyledProps--font StyledProps--main subHeading"
                >
                  cv.monitoringSources.reviewPageSubHeading
                </p>
              </div>
              <div
                class="StyledProps--font StyledProps--main main search"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <span
                      class="bp3-icon bp3-icon-search StyledProps--main"
                      icon="search"
                    >
                      <svg
                        data-icon="search"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          search
                        </desc>
                        <path
                          d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input"
                      placeholder="cv.monitoringSources.appD.searchPlaceholderApplications, environments, or services"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="headingDivider"
            />
          </div>
          <div
            class="table mappingTable"
          >
            <div
              class="header"
              role="row"
            >
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                CV.MONITORINGSOURCES.QUERYNAME
              </div>
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                cv.monitoringSources.appD.mappedToHarnessService
              </div>
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                cv.monitoringSources.appD.mappedToHarnessEnvironment
              </div>
              <div
                class="cell"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
              >
                cv.monitoringSources.gcoLogs.query
              </div>
            </div>
            <div
              class="body"
            >
              <div
                class="row card"
                role="row"
              >
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    GCO Logs Query updated 61
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    s2
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    e2
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    resource.type="k8s_container"
resource.labels.project_id="prod-setup-205416"
resource.labels.location="us-west1"
resource.labels.cluster_name="prod-private-uswest1-primary"
resource.labels.namespace_name="harness"
labels.k8s-pod/app="verification-svc"
resource.labels.pod_name="verification-svc-5b5f4ff7cc-twt9e"
                  </p>
                </div>
              </div>
              <div
                class="row card"
                role="row"
              >
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    GCO Logs Query updated 71
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    s2
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    e2
                  </p>
                </div>
                <div
                  class="cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1; width: 81%;"
                  >
                    resource.type="k8s_container"
resource.labels.project_id="prod-setup-205416"
resource.labels.location="us-west1"
resource.labels.cluster_name="prod-private-uswest1-primary"
resource.labels.namespace_name="harness"
labels.k8s-pod/app="verification-svc"
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main rightPanel"
      />
    </div>
    <div
      class="StyledProps--font StyledProps--main footerCta"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          previous
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          submit
        </span>
      </button>
    </div>
  </div>
</div>
`;
